# rusty-swagadate

./: .env  .gitignore  Cargo.toml  LICENSE  chat_ideas.md  diesel.toml  docker-compose.yaml  features.md
migrations/2025-04-05-150832_profiles/: up.sql
migrations/2025-04-05-163617_profiles_new_fields/: up.sql
migrations/2025-04-06-170819_add_age_to_profile/: up.sql
migrations/2025-04-06-173430_add_m2m_profiles/: up.sql
migrations/2025-04-06-175646_m2m_profile_activity/: down.sql  up.sql
migrations/2025-04-06-180253_add_gender_profile/: up.sql
migrations/2025-04-19-214549_add_profile_interests/: up.sql
src/: bot.rs  main.rs  match_engine.rs  pg.rs  profile.rs  profile_activities.rs  profile_view.rs  schema.rs
