[package]
name = "rusty-swagadate"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.15.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.97"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
diesel = { version = "2.2.9", features = ["chrono", "postgres", "r2d2", "uuid"] }
dotenvy = "0.15"
url = "2.5.4"
reqwest = "0.12.15"